[project]
name = "strands"
version = "0.1.0"
description = "Demonstration of the Strands AgentSkills plugin — filesystem and programmatic skill authoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=1.44.0",
    "strands-agents-tools>=0.8.1",
    "streamlit>=1.58.0",
]
